// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/views/PhoneBook Renders Displays the phonebook when signed in 1`] = `
<section
  class="page"
  id="directory"
>
  <header>
    <router-link
      to="/relations"
    >
      <icon-stub
        name="heart"
      />
    </router-link>
    <h1>
      Recent
    </h1>
    <logo-as-link-stub />
  </header>
  <hgroup>
    <!--v-if-->
  </hgroup>
  <nav
    class="profile-list"
  >
    
    <as-figure-stub
      editable="false"
      person="[object Object]"
      relations=""
    />
    
  </nav>
  <!--v-if-->
</section>
`;

exports[`@/views/PhoneBook Renders Handles when a person not loading 1`] = `
<section
  class="page"
  id="directory"
>
  <header>
    <router-link
      to="/relations"
    >
      <icon-stub
        name="heart"
      />
    </router-link>
    <h1>
      Recent
    </h1>
    <logo-as-link-stub />
  </header>
  <hgroup>
    <!--v-if-->
  </hgroup>
  <nav
    class="profile-list"
  >
    
    
  </nav>
  <!--v-if-->
</section>
`;

exports[`@/views/PhoneBook Renders Lets you know to sign in 1`] = `
<section
  class="page"
  id="directory"
>
  <header>
    <icon-stub
      name="nothing"
    />
    <h1>
      Recent
    </h1>
    <logo-as-link-stub />
  </header>
  <hgroup>
    <icon-stub
      name="working"
    />
  </hgroup>
  <!--v-if-->
  <!--v-if-->
</section>
`;
